<resources>
    <string name="app_name">Which Bank</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Profile Setup</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm">Confirm</string>
    <string name="username">Username</string>
    <string name="sign_up">Dont have an account?<b>Create one</b></string>
    <string name="have_an_account">Have an account? <b>Login.</b></string>
    <string name="hint">Enter your email here to reset</string>
    <string name="first_name">First Name</string>
    <string name="employer">Employer</string>
    <string name="last_name">Last Name</string>
    <string name="occupation">Occupation</string>
    <string name="personal_details">Personal Details</string>
    <string name="ok">OK</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="title_activity_bank_results">BankResults</string>
    <string name="section_format">Hello World from section: %1$s</string>
    <string name="you_do_not_qualify_for_any_loan">You do not qualify for any loan</string>
    <string name="radio_government">Government</string>
    <string name="radio_private">Private</string>
    <string name="government_or_private">Nature of Employment: Government/ Private</string>
    <string name="permanent_emp">Permanent</string>
    <string name="contract_emp">Contract</string>
</resources>
